Name:                vin-uploader
Version:             0.1
Synopsis:            Vin uploader Web Snap server
Description:         Uploads vin in separate server
License:             BSD3
Author:              Alexandr `VoidEx` Ruchkin
Maintainer:          voidex@live.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Executable vin-uploader
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    data-lens-template,
    transformers,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    hedis,
    snap-core   == 0.8.*,
    snap-server == 0.8.*,
    snap        == 0.8.*,
    snaplet-simple-log,
    vin-parser,
    snaplet-redis

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
